[project]
name = "jafaal"
version = "0.1.0"
description = "Just Another Fast API Auth Library"
authors = [
    {name = "João Vitória Silva",email = "8648976+joaovitoriasilva@users.noreply.github.com"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pwdlib[argon2,bcrypt] (>=0.2.1,<0.3.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
